--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body, h1, h2, p, ul {
     padding: 0;
   }
   
-  
+  /* styling the body */
   body {
     font-family: 'Arial', sans-serif;
     background-color: #f7f7f7;
